Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25697

Accessing composite type properties of a QML object fails

    XMLWordPrintable

Details

    • 14e247e4b94df17ed62750b4468c2ac25aabe30f

    Description

      Since the API changes to the meta type system, it is not possible to access composite type properties of a QML element from CPP via QObject::property(). Similarly, list properties of those types are also unavailable for use.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            chriadam Christopher Adams (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes